--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -62,7 +62,7 @@
                             <h2>{{this.Farmerid}}</h2>
                             <h4>{{this.description}}</h4>
                             <h3>{{this.price}}</h3>
-                            <a href="#" class="button">Checkout</a> 
+                            <a href="#" class="button">Buy From Farmer</a> 
                             </div>
                         </section>
            
